--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -5,23 +5,25 @@
 {% block content %}
     <main>
       <div class="container py-5">        
-        <h1>Все посты пользователя {{author}} </h1>
+        <h1>Все посты пользователя {{author.username}} </h1>
         <h3>Всего постов: {{author_posts_count}} </h3>   
-        {% if following %}
-        <a
-          class="btn btn-lg btn-light"
-          href="{% url 'posts:profile_unfollow' author.username %}" role="button"
-        >
-          Отписаться
-        </a>
-      {% else %}
-          <a
-            class="btn btn-lg btn-primary"
-            href="{% url 'posts:profile_follow' author.username %}" role="button"
-          >
-            Подписаться
-          </a>
-       {% endif %}
+        {% if author != request_user %}        
+          {% if following %}
+            <a
+              class="btn btn-lg btn-light"
+              href="{% url 'posts:profile_unfollow' author.username %}" role="button"
+            >
+              Отписаться
+            </a>
+          {% else %}
+              <a
+               class="btn btn-lg btn-primary"
+                href="{% url 'posts:profile_follow' author.username %}" role="button"
+              >
+               Подписаться
+              </a>
+          {% endif %}
+        {% endif %}
       <article>
       {% for post in page_obj %}
           {% include 'includes/common_in_post.html' %} 
